--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link type="text/html" href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet">
     <link type="text/html" href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- font-awesome-icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <!-- material-icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
